# godot-explorer

./: .dockerignore  .gdformatrc  .gdlintrc  .gitignore  .gitmodules  .ignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.build-local  FIX_ERRORS_PROMPT.md  LICENSE  PARSE_ERRORS.md  PR_MESSAGE.md  README.md  REVIEW.md  build-android-apk.sh  docker-build-android.sh  download_dependencies.py  entry-point.sh  errors.txt  errors_detailed.json  errors_simple.json  errors_summary.json  folder_hash.py  gdlintrc  install-cargo.sh  mobile-run-output-genesis-plaza.txt  parse_errors.py  rust-toolchain.toml  scene_log_types.ts  scene_log_viewer.html  test_commit.txt  test_dsym_generation.sh
lib/: ANDROID_BUILD.md  Cargo.toml  android-build.sh  build.rs  builds.md  ios-build.sh  web-build.sh
lib/.cargo/: config.toml
lib/src/: deep_link.rs  get_hash.sh  lib.rs  notifications.rs
lib/src/analytics/: data_definition.rs  frame.rs  install_referrer.rs  metrics.rs  mod.rs
lib/src/asset_server/: godot_wrapper.rs  handlers.rs  job_manager.rs  mod.rs  packer.rs  processor.rs  scene_fetcher.rs  server.rs  types.rs
lib/src/auth/: auth_identity.rs  dcl_player_identity.rs  decentraland_auth_server.rs  deploy_profile.rs  device_anchor.rs  ephemeral_auth_chain.rs  ethereum_provider.rs  magic_auth_identity.rs  magic_wallet.rs  mod.rs  remote_wallet.rs  thirdweb_guest.rs  wallet.rs
lib/src/av/: audio_context.rs  mod.rs  stream_processor.rs  video_context.rs  video_stream.rs
lib/src/av/backend/: mod.rs  noop.rs
lib/src/avatars/: avatar_scene.rs  avatar_type.rs  dcl_user_profile.rs  item.rs  mod.rs  scene_emote.rs
lib/src/comms/: comms.md  communication_manager.rs  consts.rs  mod.rs  profile.rs  randomize_profile.rs  signed_login.rs  voice_chat.rs
lib/src/comms/adapter/: archipelago.rs  livekit.rs  message_processor.rs  mod.rs  movement_compressed.rs  ws_room.rs
lib/src/content/: audio.rs  content_mapping.rs  content_provider.rs  gltf.rs  mod.rs  packed_array.rs  profile.rs  resource_download_tracking.rs  resource_provider.rs  scene_saver.rs  semaphore_ext.rs  texture.rs  texture_compression.rs  thread_safety.rs  video.rs  wearable_entities.rs  web_resource_provider.rs
lib/src/content/gltf/: common.rs  emote.rs  mod.rs  octahedral_impostor.rs  scene.rs  tests.rs  wearable.rs
lib/src/content_v2/: content_provider.rs  gltf_loader.rs  mod.rs  scene_saver.rs
lib/src/converter_server/: mod.rs  server.rs  zip_builder.rs
lib/src/converter_server/handlers/: convert_gltf.rs  convert_texture.rs  mod.rs  package_scene.rs
lib/src/dcl/: mod.rs  scene_apis.rs  ui_text_tags.rs
lib/src/dcl/common/: content_entity.rs  mod.rs  scene.rs  wearable.rs
lib/src/dcl/components/: material.rs  mod.rs  proto_components.rs  transform_and_parent.rs
lib/src/dcl/crdt/: grow_only_set.rs  last_write_wins.rs  message.rs  mod.rs
lib/src/dcl/js/: adaptation_layer_helper.rs  comms.rs  engine.rs  ethereum_controller.rs  events.rs  inspector.rs  mod.rs  players.rs  portables.rs  restricted_actions.rs  runtime.rs  scene_inspector_ops.rs  scene_logging_ops.rs  testing.rs
lib/src/dcl/serialization/: crdt.rs  engine.rs  internal_player_data.rs  mod.rs  protobuffer.rs  reader.rs  rust_data_types.rs  writer.rs
lib/src/env/: mod.rs
lib/src/godot_classes/: animator_controller.rs  dcl_android_plugin.rs  dcl_audio_source.rs  dcl_audio_stream.rs  dcl_avatar.rs  dcl_avatar_modifier_area_3d.rs  dcl_camera_3d.rs  dcl_camera_mode_area_3d.rs  dcl_cli.rs  dcl_config.rs  dcl_confirm_dialog.rs  dcl_crash_generator.rs  dcl_dynamic_graphics_manager.rs  dcl_ether.rs  dcl_floating_islands_manager.rs  dcl_global.rs  dcl_global_time.rs  dcl_gltf_container.rs  dcl_gltf_render_manager.rs  dcl_hashing.rs  dcl_ios_plugin.rs  dcl_locomotion_settings.rs  dcl_node_entity_3d.rs  dcl_parse_deep_link.rs  dcl_player.rs  dcl_realm.rs  dcl_resource_tracker.rs  dcl_rich_ui_text.rs  dcl_scene_node.rs  dcl_social_blacklist.rs  dcl_social_service.rs  dcl_swift_lib.rs  dcl_tokio_rpc.rs  dcl_ui_background.rs  dcl_ui_border.rs  dcl_ui_control.rs  dcl_ui_dropdown.rs  dcl_ui_input.rs  dcl_ui_scroll.rs  dcl_ui_text.rs  (+10 more)
lib/src/godot_classes/floating_islands/: cliffs.rs  mod.rs  props.rs  props_pool.rs  terrain.rs
lib/src/godot_classes/gltf_render/: load_timeout.rs  mesh_pool.rs  mod.rs  promotion_tracker.rs  slot_allocator.rs
lib/src/godot_classes/portables/: mod.rs
lib/src/godot_classes/rpc_sender/: dcl_rpc_sender.rs  take_and_compare_snapshot_response.rs
lib/src/http_request/: http_queue_requester.rs  mod.rs  request_response.rs  rust_http_queue_requester.rs  rust_requester.rs  web_http_requester.rs
lib/src/notifications/: manager.rs  mod.rs  service.rs  types.rs
lib/src/profile/: mod.rs  profile_service.rs
lib/src/realm/: dcl_scene_entity_definition.rs  mod.rs  parcel.rs  scene_definition.rs  scene_entity_coordinator.rs
lib/src/scene_runner/: deleted_entities.rs  global_get_node_helper.rs  godot_dcl_scene.rs  input.rs  light_source.rs  loading_session.rs  mod.rs  object_pool.rs  pool_manager.rs  scene.rs  scene_manager.rs  tokio_runtime.rs  ui_blocker_registry.rs  update_scene.rs
lib/src/scene_runner/components/: animator.rs  audio_source.rs  audio_stream.rs  avatar_attach.rs  avatar_data.rs  avatar_shape.rs  (+25 more)
lib/src/social/: friends.rs  mod.rs  social_service_manager.rs
lib/src/test_runner/: mod.rs  project_settings_test.rs  test_suite.rs  testing_tools.rs
lib/src/tools/: benchmark_report.rs  descriptor_tracker.rs  godot_logger.rs  log_stream.rs  memory_debugger.rs  mod.rs  network_inspector.rs  performance_debugger.rs  sentry_logger.rs
lib/src/urls/: mod.rs
lib/src/utils/: infer_mime.rs  log_writer.rs  mod.rs
rust/decentraland-godot-lib/: Cargo.toml  android-build.sh  build.rs  builds.md  ios-build.sh  web-build.sh
rust/decentraland-godot-lib/.cargo/: config.toml
rust/decentraland-godot-lib/src/: lib.rs  main_class.rs
rust/xtask/: Cargo.toml
rust/xtask/src/: consts.rs  copy_files.rs  download_file.rs  export.rs  install_dependency.rs  main.rs  path.rs  proto_dependency.rs  run.rs
(+6329 files in other folders)
