[package]
name = "dclgodot"
version = "0.43.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.1.3", features=["experimental-threads", "serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.92", features = ["raw_value"] }
tokio = { version = "1.40.0", features = ["full"] }
json5 = "0.4"
protobuf = "3.2.0"
prost = "0.11.8"
once_cell = "1.16.0"
futures-lite = "1.12.0"

hyper = { version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "0.1.0-rc.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
regex = "*"
urn = "0.7.0"

ethers-core = { version = "2.0" }
ethers-signers = { version = "2.0" }
ethers-providers = { version = "2.0", features = ["ws","rustls"] }

async-trait = "0.1.68"

cpal = { version = "0.15.2", optional = true }

thiserror = "1.0"
anyhow = "1.0.70"

tracing = "0.1"
tracing-subscriber = "0.3"
poll-promise = "0.2.0"
log-panics = { version = "2", features = ["with-backtrace"]}

v8 = { version = "0.106.0", optional = true }
deno_core = { version = "0.308.0", optional = true }
uuid = { version = "1.3.0", features = ["v4"] }
fastwebsockets = { version = "0.3.1", features = ["upgrade"], optional = true }
hyper1 = { package = "hyper", version = "0.14.26", features = ["server","runtime", "http1"], optional = true }
num-traits = "0.2"
num-derive = "0.4"
num = "0.4"
http = "0.2.9"
bytes = "1.4.0"
url = "2.5"

tokio-tungstenite = "0.20.1"
futures-util = "0.3.30"

livekit = { git = "https://github.com/robtfm/client-sdk-rust", branch="0.6-h264-false-2", features=["rustls-tls-webpki-roots"], optional = true }

taffy = "0.5.2"
tracing-test = "0.2.4"

base64 = "0.21.5"
chrono = "0.4.31"

simple-easing = "1.0.1"

multihash-codetable = { version = "0.1.1", features = ["digest", "sha2"] } 
cid = "0.11.0"
multipart = { version = "0.18.0", default-features = false, features = ["client", "lazy_static"] }

modular-bitfield = "0.11"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
paranoid-android = "0.2.1"

[features]
default = ["use_livekit", "use_deno"]
use_livekit = ["dep:livekit", "dep:webrtc-sys-build"]
use_deno = ["dep:deno_core", "dep:v8"]
use_resource_tracking = []
use_voice_chat = []
use_memory_debugger = []

# TODO: Fix enable_inspector failure when cross-compiling to Android from Windows.
#       The FastWebSockets build incorrectly includes `unmask`.
enable_inspector = ["use_deno", "dep:fastwebsockets", "dep:hyper1"]

[build-dependencies]
webrtc-sys-build = { git = "https://github.com/robtfm/client-sdk-rust", branch="0.6-h264-false-2", optional = true }
prost-build = "0.11.8"
chrono = "0.4.31"

[profile.release]
opt-level = 3
lto = true
debug = 1
strip = false