[package]
name = "decentraland-godot-lib"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", rev = "a81fc410" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.92", features = ["raw_value"] }
tokio = { version = "1.26.0", features = ["sync", "rt-multi-thread", "net"] }
protobuf = "3.2.0"
prost = "0.11.8"
once_cell = "1.16.0"
futures-lite = "1.12.0"

hyper = { version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "0.1.0-rc.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
regex = "*"
urn = "0.7.0"
ethers = { version = "2.0", features = ["rustls"] }
async-trait = "0.1.68"

cpal = "0.15.2"
ffmpeg-next = { git = "https://github.com/decentraland/rust-ffmpeg/", branch="audioline-and-mobile-fix" }

thiserror = "1.0"
anyhow = "1.0.70"

tracing = "0.1"
tracing-subscriber = "0.3"
poll-promise = "0.2.0"
log-panics = { version = "2", features = ["with-backtrace"]}

v8 = "0.74.3"
deno_core = "0.197"
num-traits = "0.2"
num-derive = "0.3"
num = "0.4"
http = "0.2.9"
bytes = "1.4.0"

tokio-tungstenite = "*"
futures-util = "*"

livekit = { git = "https://github.com/robtfm/client-sdk-rust", branch="h264-false", features=["rustls-tls-webpki-roots"] }

taffy = { git = "https://github.com/DioxusLabs/taffy", rev="7eee673c5ea65f64f35c53f5ee2fe5faf62b9c1e" }
tracing-test = "0.2.4"

base64 = "0.21.5"
chrono = "0.4.31"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
paranoid-android = "0.2.1"

[build-dependencies]
webrtc-sys-build = "0.2.0"
prost-build = "0.11.8"

[patch."https://github.com/godot-rust/godot4-prebuilt".godot4-prebuilt]
git = "https://github.com//godot-rust/godot4-prebuilt"
branch = "4.1.3"
