[package]
name = "decentraland-godot-lib"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", rev = "5e18af87a13bf8d40b4f50bfcb180228e227b773", features=["experimental-threads", "serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.92", features = ["raw_value"] }
tokio = { version = "1.37.0", features = ["full"] }
protobuf = "3.2.0"
prost = "0.11.8"
once_cell = "1.16.0"
futures-lite = "1.12.0"

hyper = { version = "1.2.0", features = ["http1"] }
http-body-util = "0.1.0-rc.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
regex = "*"
urn = "0.7.0"

#ethers = { git = "https://github.com/kuruk-mm/ethers-rs/", branch = "patch-1", features = ["rustls", "ws"] }
ethers-core = "2.0"
ethers-signers = "2.0"

async-trait = "0.1.68"

cpal = { version = "0.15.2", optional = true }
ffmpeg-next = { git = "https://github.com/decentraland/rust-ffmpeg/", branch="audioline-and-mobile-fix-6.1", optional = true }

thiserror = "1.0"
anyhow = "1.0.70"

tracing = "0.1"
tracing-subscriber = "0.3"
poll-promise = "0.2.0"
log-panics = { version = "2", features = ["with-backtrace"]}

v8 = { version = "0.74.3", optional = true }
deno_core = { version = "0.197", optional = true }
uuid = { version = "1.3.0", features = ["v4"], optional = true }
fastwebsockets = { version = "0.3.1", features = ["upgrade"], optional = true }
hyper1 = { package = "hyper", version = "0.14.26", features = ["server","runtime", "http1"], optional = true }
num-traits = "0.2"
num-derive = "0.3"
num = "0.4"
http = "0.2.9"
bytes = "1.4.0"

tokio-tungstenite = "0.20.1"
futures-util = "0.3.30"

livekit = { git = "https://github.com/robtfm/client-sdk-rust", branch="h264-false", features=["rustls-tls-webpki-roots"], optional = true }

taffy = { git = "https://github.com/DioxusLabs/taffy", rev="7eee673c5ea65f64f35c53f5ee2fe5faf62b9c1e" }
tracing-test = "0.2.4"

base64 = "0.21.5"
chrono = "0.4.31"

simple-easing = "1.0.1"

multihash-codetable = { version = "0.1.1", features = ["digest", "sha2"] }
cid = "0.11.0"
multipart = { version = "0.18.0", default-features = false, features = ["client", "lazy_static"] }

[target.'cfg(target_os = "android")'.dependencies]
ffmpeg-next = { git = "https://github.com/decentraland/rust-ffmpeg/", branch = "audioline-and-mobile-fix-6.1", features = ["fix_usize_size_t"], optional = true }
jni = { version = "0.21.1", features = ["invocation"] }
paranoid-android = "0.2.1"

[features]
default = ["use_ffmpeg", "use_livekit", "use_deno", "use_crypto"]
use_ffmpeg = ["dep:ffmpeg-next", "dep:cpal"]
use_livekit = ["use_ffmpeg", "dep:livekit"]
use_deno = ["dep:deno_core", "dep:v8"]
use_crypto = []
enable_inspector = ["use_deno", "dep:uuid", "dep:fastwebsockets", "dep:hyper1"]

[build-dependencies]
webrtc-sys-build = "0.2.0"
prost-build = "0.11.8"

[patch."https://github.com/godot-rust/godot4-prebuilt".godot4-prebuilt]
git = "https://github.com//godot-rust/godot4-prebuilt"
branch = "4.2.1"

[dependencies.ring]
features = ["std", "wasm32_c"]