[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtaskops = "^0.4.1"
anyhow = "1"
clap = "3"
serde = "1.0.152"
flate2 = "1.0.*"
tar = "0.4.*"
zip = "0.5.*"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = { version = "1.0.92", features = ["raw_value"] }
glob = "*"